--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,8 @@
+# Copyright 2015-2021 by Vegard IT GmbH, Germany, https://vegardit.com
+# SPDX-License-Identifier: Apache-2.0
+#
+# Author: Sebastian Thomschke, Vegard IT GmbH
+#
 # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions
 name: Build
 
@@ -18,6 +23,7 @@ on:
         description: 'Additional Maven Args'
         required: false
         default: ''
+
 
 jobs:
   build:
@@ -44,17 +50,17 @@ jobs:
     #      ~/.xshare/${{ steps.java-version-checksum.outputs.md5sum }}
     #    key: ${{ runner.os }}-xshare-${{ steps.java-version-checksum.outputs.md5sum }}
 
-    - name: Cache local Maven repository
+    - name: "Cache: Local Maven Repository"
       uses: actions/cache@v2
       with:
         path: |
           ~/.m2/repository
-          !~/.m2/repository/com/vegardit
+          !~/.m2/repository/com/vegardit/maven
         key: ${{ runner.os }}-mvnrepo-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-mvnrepo-
 
-    - name: Cache Maven binary
+    - name: "Cache: Maven Binaries"
       uses: actions/cache@v2
       with:
         path: |
@@ -67,23 +73,25 @@ jobs:
       env:
         GITHUB_USER: ${{ github.actor }}
         GITHUB_API_KEY: ${{ github.token }}
-        JAVA_VERSION: ${{ matrix.java }}
         MAY_CREATE_RELEASE: false
       run: |
         bash .ci/build.sh ${{ github.event.inputs.additional_maven_args }}
 
     - name: Build with Maven
       id: maven-build
-      if: ${{ github.ref == 'refs/heads/main' }}
+      if: github.ref == 'refs/heads/main'
       env:
         DEPLOY_SNAPSHOTS_TO_GITHUB_BRANCH: true
         GITHUB_USER: ${{ github.actor }}
         GITHUB_API_KEY: ${{ secrets.GH_API_TOKEN }}
+        MAY_CREATE_RELEASE: true
         SIGN_KEY: ${{ secrets.GPG_SIGN_KEY }}
         SIGN_KEY_PASS: ${{ secrets.GPG_SIGN_KEY_PWD }}
         SONATYPE_OSSRH_USER: ${{ secrets.SONATYPE_OSSRH_USER }}
         SONATYPE_OSSRH_USER_TOKEN: ${{ secrets.SONATYPE_OSSRH_USER_TOKEN }}
       run: |
+        set -eu
+
         # https://github.community/t/github-actions-bot-email-address/17204
         git config user.name "github-actions[bot]"
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
