--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,8 +33,9 @@ jobs:
       uses: actions/checkout@v2 #https://github.com/actions/checkout
 
     - name: Set up JDK 8
-      uses: actions/setup-java@v1 #https://github.com/actions/setup-java
+      uses: actions/setup-java@v2 #https://github.com/actions/setup-java
       with:
+        distribution: 'zulu'
         java-version: 8
 
     # reusing CDS archives of the same JVM randomly fails in GitHub Actions with
