downgrading Eclipse Java Compiler from 3.27.0 to 3.26.0

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
 
    @author Sebastian Thomschke, Vegard IT GmbH
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
    <modelVersion>4.0.0</modelVersion>
 
@@ -99,7 +100,8 @@
       <java.vendor.integration-tests>${java.vendor}</java.vendor.integration-tests>
 
       <!-- https://search.maven.org/search?q=g:org.eclipse.jdt%20a:ecj -->
-      <eclipse-java-compiler.version>3.27.0</eclipse-java-compiler.version>
+      <!-- newer versions required JDK 11 -->
+      <eclipse-java-compiler.version>3.26.0</eclipse-java-compiler.version>
 
       <groovy.version>3.0.9</groovy.version>
 
