--- a/pom.xml
+++ b/pom.xml
@@ -945,7 +945,6 @@
                         ${maven-bundle-plugin.instructions}
                      </instructions>
                      <niceManifest>${maven-bundle-plugin.niceManifest}</niceManifest>
-                     <obrRepository>NONE</obrRepository>
                      <excludeDependencies>true</excludeDependencies>
                   </configuration>
                </execution>
@@ -1204,6 +1203,7 @@
             </plugin>
 
             <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
@@ -1223,6 +1223,7 @@
             </plugin>
 
             <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.3.2</version>
                <configuration>
@@ -1244,6 +1245,7 @@
             </plugin>
 
             <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-ear-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
@@ -1269,6 +1271,7 @@
             </plugin>
 
             <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
@@ -1289,6 +1292,7 @@
             </plugin>
 
             <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-scm-plugin</artifactId>
                <version>${maven.scm.version}</version>
                <configuration>
@@ -1307,6 +1311,7 @@
             </plugin>
 
             <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
@@ -1344,6 +1349,7 @@
             </plugin>
 
             <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-changelog-plugin</artifactId>
                <version>2.3</version>
                <configuration>
@@ -1402,6 +1408,7 @@
             </plugin>
 
             <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
@@ -1412,6 +1419,7 @@
 
             <plugin>
                <!-- exclude unit tests ending with ITest (= integration tests) from unit-test phase -->
+               <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
                <configuration>
@@ -1441,6 +1449,7 @@
             </plugin>
             <plugin>
                <!-- http://maven.apache.org/surefire/maven-failsafe-plugin/usage.html -->
+               <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven.surefire.version}</version>
                <configuration>
@@ -1661,6 +1670,7 @@
 
          <plugin>
             <!-- Generate a report based on the results of unit tests. -->
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-report-plugin</artifactId>
             <version>${maven.surefire.version}</version>
             <configuration>
@@ -1778,6 +1788,7 @@
          </plugin>
 
          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-project-info-reports-plugin</artifactId>
             <version>3.2.1</version>
             <configuration>
@@ -2012,12 +2023,14 @@
             <pluginManagement>
                <plugins>
                   <plugin>
+                     <groupId>org.apache.maven.plugins</groupId>
                      <artifactId>maven-war-plugin</artifactId>
                      <configuration>
                         <packagingExcludes>**/rebel.xml</packagingExcludes>
                      </configuration>
                   </plugin>
                   <plugin>
+                     <groupId>org.apache.maven.plugins</groupId>
                      <artifactId>maven-jar-plugin</artifactId>
                      <configuration>
                         <excludes>
@@ -2100,6 +2113,7 @@
                   </configuration>
                </plugin>
                <plugin>
+                  <!-- https://help.sonatype.com/repomanager2/staging-releases/configuring-your-project-for-deployment -->
                   <groupId>org.sonatype.plugins</groupId>
                   <artifactId>nexus-staging-maven-plugin</artifactId>
                   <version>1.6.11</version>
@@ -2116,7 +2130,6 @@
                            <autoReleaseAfterClose>${nexus-staging-maven-plugin.autoReleaseAfterClose}</autoReleaseAfterClose>
                            <serverId>sonatype-ossrh</serverId>
                            <nexusUrl>${nexus-staging-maven-plugin.nexusUrl}</nexusUrl>
-                           <indentSize>3</indentSize>
                         </configuration>
                      </execution>
                   </executions>
