--- a/pom.xml
+++ b/pom.xml
@@ -2116,6 +2116,7 @@
                   <!-- https://help.sonatype.com/repomanager2/staging-releases/configuring-your-project-for-deployment -->
                   <groupId>org.sonatype.plugins</groupId>
                   <artifactId>nexus-staging-maven-plugin</artifactId>
+                  <!-- don't upgrade to 1.6.8-1.6.11 see https://issues.sonatype.org/browse/NEXUS-31214 -->
                   <version>1.6.8</version>
                   <extensions>true</extensions>
                   <executions>
