--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
       <maven-bundle-plugin.niceManifest>true</maven-bundle-plugin.niceManifest>
       <maven-bundle-plugin.private-package>*.internal.*</maven-bundle-plugin.private-package>
       <maven-bundle-plugin.import-package>*</maven-bundle-plugin.import-package>
-      <maven-bundle-plugin.instructions />
+      <maven-bundle-plugin.export-packages.no-uses>false</maven-bundle-plugin.export-packages.no-uses>
 
       <nexus-staging-maven-plugin.autoReleaseAfterClose>true</nexus-staging-maven-plugin.autoReleaseAfterClose>
       <nexus-staging-maven-plugin.nexusUrl>https://oss.sonatype.org/</nexus-staging-maven-plugin.nexusUrl>
@@ -938,12 +938,15 @@
                         <supportedProjectType>bundle</supportedProjectType>
                         <supportedProjectType>maven-plugin</supportedProjectType>
                      </supportedProjectTypes>
+
+                     <!-- https://bnd.bndtools.org/chapters/825-instructions-ref.html -->
                      <instructions>
                         <_include>${custom.manifestTemplateFile}</_include>
+                        <_nouses>${maven-bundle-plugin.export-packages.no-uses}</_nouses>
                         <Private-Package>${maven-bundle-plugin.private-package}</Private-Package>
                         <Import-Package>${maven-bundle-plugin.import-package}</Import-Package>
-                        ${maven-bundle-plugin.instructions}
                      </instructions>
+
                      <niceManifest>${maven-bundle-plugin.niceManifest}</niceManifest>
                      <excludeDependencies>true</excludeDependencies>
                   </configuration>
