--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,14 @@
 
    @author Sebastian Thomschke, Vegard IT GmbH
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
    <modelVersion>4.0.0</modelVersion>
 
    <groupId>com.vegardit.maven</groupId>
    <artifactId>vegardit-maven-parent</artifactId>
-   <version>2.5.4-SNAPSHOT</version>
+   <version>3.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
 
 
@@ -89,7 +90,7 @@
       -->
       <project.build.outputTimestamp>${maven.build.timestamp}</project.build.outputTimestamp>
 
-      <java.version>1.8</java.version>
+      <java.version>11</java.version>
       <java.vendor>default</java.vendor>
 
       <java.version.unit-tests>${java.version}</java.version.unit-tests>
@@ -99,8 +100,7 @@
       <java.vendor.integration-tests>${java.vendor}</java.vendor.integration-tests>
 
       <!-- https://search.maven.org/search?q=g:org.eclipse.jdt%20a:ecj -->
-      <!-- newer versions required JDK 11 -->
-      <eclipse-java-compiler.version>3.26.0</eclipse-java-compiler.version>
+      <eclipse-java-compiler.version>3.29.0</eclipse-java-compiler.version>
 
       <groovy.version>3.0.10</groovy.version>
 
@@ -119,7 +119,7 @@
       <!-- enables https://github.com/timgifford/maven-buildtime-extension -->
       <buildtime.output.log>true</buildtime.output.log>
 
-      <checkstyle.version>9.2.1</checkstyle.version>
+      <checkstyle.version>9.3</checkstyle.version>
       <checkstyle.skip>false</checkstyle.skip>
       <checkstyle.sevntu-checks.version>1.41.0</checkstyle.sevntu-checks.version>
       <checkstyle.violation-severity>warning</checkstyle.violation-severity>
@@ -846,7 +846,8 @@
                      <commandlineArgs>
                         -jar "${custom.ecjJarPath}"
                         -encoding ${project.build.sourceEncoding}
-                        ${custom.compileBootClasspathOption} "${custom.compileBootClasspath}"
+                        ${custom.compileBootClasspathOption}
+                        "${custom.compileBootClasspath}"
                         -g<!-- include debug info -->
                         -parameters<!-- generate method parameters attribute
                           TODO enabling this option breaks
@@ -877,7 +878,8 @@
                      <commandlineArgs>
                         -jar "${custom.ecjJarPath}"
                         ${custom.testCompileBootClasspathOption} "${custom.testCompileBootClasspath}"
-                        -encoding ${project.build.sourceEncoding}
+                        -encoding
+                        ${project.build.sourceEncoding}
                         -g<!-- include debug info -->
                         -parameters<!-- generate method parameters attribute -->
                         -genericsignature<!-- generate generic signature for lambda expressions -->
@@ -887,7 +889,8 @@
                         -d "${project.build.testOutputDirectory}"
                         -source ${java.version.unit-tests}
                         -target ${java.version.unit-tests}
-                        -cp "${custom.testClasspathElements}"<!-- <classpath /> doesn't work here as it misses runtime dependencies -->
+                        -cp
+                        "${custom.testClasspathElements}"<!-- <classpath /> doesn't work here as it misses runtime dependencies -->
                         ${custom.ecjTestSourcePaths}
                      </commandlineArgs>
                   </configuration>
@@ -1709,9 +1712,7 @@
             <groupId>com.github.siom79.japicmp</groupId>
             <artifactId>japicmp-maven-plugin</artifactId>
             <configuration>
-               <configuration>
-                  <skip>${skip.report.japicmp-maven-plugin}</skip>
-               </configuration>
+               <skip>${skip.report.japicmp-maven-plugin}</skip>
             </configuration>
             <reportSets>
                <reportSet>
@@ -1726,9 +1727,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-checkstyle-plugin</artifactId>
             <configuration>
-               <configuration>
-                  <skip>${skip.report.maven-checkstyle-plugin}</skip>
-               </configuration>
+               <skip>${skip.report.maven-checkstyle-plugin}</skip>
             </configuration>
             <reportSets>
                <reportSet>
