--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,8 @@ on:
         required: false
         default: ''
 
+env:
+  JAVA_VERSION: 11
 
 jobs:
   build:
@@ -33,11 +35,11 @@ jobs:
     - name: Git Checkout
       uses: actions/checkout@v3 #https://github.com/actions/checkout
 
-    - name: Set up JDK 11
+    - name: Set up JDK ${{ env.JAVA_VERSION }}
       uses: actions/setup-java@v3 #https://github.com/actions/setup-java
       with:
         distribution: 'zulu'
-        java-version: 11
+        java-version: ${{ env.JAVA_VERSION }}
 
     # reusing CDS archives of the same JVM randomly fails in GitHub Actions with
     # "An error has occurred while processing the shared archive file. shared class paths mismatch"
