enable execution of gmavenplus plugin from within eclipse on full builds

--- a/pom.xml
+++ b/pom.xml
@@ -2309,7 +2309,10 @@
                                     </goals>
                                  </pluginExecutionFilter>
                                  <action>
-                                    <ignore />
+                                    <execute>
+                                       <runOnConfiguration>true</runOnConfiguration>
+                                       <runOnIncremental>false</runOnIncremental>
+                                    </execute>
                                  </action>
                               </pluginExecution>
                               <pluginExecution>
