--- a/pom.xml
+++ b/pom.xml
@@ -923,14 +923,14 @@
                      <skip>${custom.noJavaArtifact}</skip>
                      <target>
                         <!-- delete the java.*/javax.* class stubs after compilation, before testing -->
-                        <delete>
+                        <delete erroronmissingdir="false">
                             <!-- we only delete class files not any potential other resource files -->
                             <fileset dir="${project.build.directory}/classes/java" includes="**/*.class" />
                             <fileset dir="${project.build.directory}/classes/javax" includes="**/*.class" />
                         </delete>
 
                         <!-- recursively delete empty directories -->
-                        <delete includeemptydirs="true">
+                        <delete erroronmissingdir="false" includeemptydirs="true">
                            <fileset dir="${project.build.directory}/classes">
                               <and><type type="dir" /><size value="0" /></and>
                            </fileset>
