--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,8 @@
       <maven.scm.svnjava.version>2.2.1</maven.scm.svnjava.version>
       <maven.wagon.version>3.5.2</maven.wagon.version>
 
+      <m2e.apt.activation>jdt_apt</m2e.apt.activation>
+
       <!-- see http://www.mkyong.com/maven/maven-site-build-is-very-slow-dependency-report/ -->
       <!-- see http://java-drobnosti.blogspot.de/2012/12/maven-slow-generating-dependencies.html -->
       <dependency.locations.enabled>false</dependency.locations.enabled>
